--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,10 @@
  version: 2
  jobs:
    one:
-     docker:
-       - image: circleci/ruby:2.4.1
      steps:
        - checkout
-       - run: echo "A first hello"
-       - run: sleep 25
-   two:
-     docker:
-       - image: circleci/ruby:2.4.1
-     steps:
-       - checkout
-       - run: echo "A more familiar hi"
-       - run: sleep 15
- workflows:
-   version: 2
-   one_and_two:
-     jobs:
-       - one
-       - two
+       - run: npm run-script build
+       - aws-s3/sync:
+          from: build
+          to: 's3://terraform-alex-shing'
+          overwrite: true
