--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: 'circleci/python:2.7'
+      - image: 'circleci/node:10.16.3'
     steps:
       - checkout
       - run: npm run-script build
