--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - image: 'circleci/node:10.16.3'
     steps:
       - checkout
+      - run: npm install      
       - run: npm run-script build
       - aws-s3/sync:
           from: build
